feat: Ending Landing Page 🙈🙈

--- a/src/Pages/Landing/index.html
+++ b/src/Pages/Landing/index.html
@@ -41,7 +41,7 @@
 
         <div class="Card"> 
 
-            <img src="" alt="" class="Icon">
+            <img src="../../../public/icons/mensaje-04.png" alt="" class="Icon">
 
             <p class="CardTittle">Social Network</p>
 
@@ -51,7 +51,7 @@
 
         <div class="Card"> 
 
-            <img src="" alt="" class="Icon">
+            <img src="../../../public/icons/corazon-03.png" alt="" class="Icon">
 
             <p class="CardTittle">Favorite Songs</p>
 
@@ -61,7 +61,7 @@
 
         <div class="Card"> 
 
-            <img src="" alt="" class="Icon">
+            <img src="../../../public/icons/user flecha-02.png" alt="" class="Icon">
 
             <p class="CardTittle">Verified Artist</p>
 
