feat: Home page first component

--- a/src/Pages/home/index.html
+++ b/src/Pages/home/index.html
@@ -13,15 +13,15 @@
 
 
     <div class="Header">
-        <img src="../../../public/imgs/logo/LogoHiFiacNoBackground.png" alt="" class="Logo">
+        <img src="../../../public/imgs/logo/LogoHiFiaca Ajustado No Fondo.png" alt="" class="Logo">
 
-        <div>
+        <div class="NavBarIcons">
 
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="../../../public/icons/busqueda-05.png" alt="" class="Icon"></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href="../Landing/index.html"><img src="../../../public/icons/salida-10.png" alt="" class="Icon"></a>
 
-            <a href=""><img src="" alt=""></a>
+            <a href=""><img src="../../../public/icons/userr_Mesa de trabajo 1.png" alt="" class="Icon"></a>
 
         </div>
     </div>
@@ -30,10 +30,38 @@
         <span></span>
     </div>
 
-    <div class="CardCommentSection">
-        
-    </div>
+    
+    <app-container></app-container>
 
+    <div class="GlobalContainer">
+
+        <div class="CardCommentSection">
+
+            <div class="CardHeader">
+
+                <img src="../../../public/icons/user en circulo-09.png" alt="" class="UserProfile">
+
+                <p class="UserName">jlouisce</p>
+
+            </div>
+
+            <div class="CardComment">
+
+                <textarea class="TextCamp" placeholder="What is the song of the day?"></textarea>
+
+            </div>
+
+            <div class="CardFooter">
+
+                <a href=""><p class="Button">Sumbit</p></a>
+
+                <a href=""><img src="../../../public/icons/musica-06.png" alt="" class="IconMusic"></a>
+
+            </div>
+
+        </div>
+
+    </div>
 
     <footer class="Footer">
 
@@ -45,6 +73,7 @@
             <p class="FooterText1">Terms and Conditions</p>
         </div>
     </footer>
+
 
 </body>
 <script src="./index.js" type="module"></script>
