--- a/src/Pages/Landing/index.html
+++ b/src/Pages/Landing/index.html
@@ -11,7 +11,12 @@
 <link rel="stylesheet" href="./style.css">
 <body>
     
-    <!-- <div class="BackSphere"></div>  Para las esferas del fondo pero no se como hacerlo bien-->
+        <img src="../../../public/imgs/logo/Circulos sin fondo.png" class="CircleSmall" alt="">
+
+        <img src="../../../public/imgs/logo/Circulos sin fondo.png" class="CircleBig" alt="">
+
+        <img src="../../../public/imgs/logo/Circulos sin fondo.png" class="CircleMedium" alt="">
+
 
     <div class="Logo">
         <img src="../../../public/imgs/logo/LogoHiFiacNoBackground.png" alt="" class="LogoImage">
