--- a/src/Pages/home/home.html
+++ b/src/Pages/home/home.html
@@ -3,49 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HiFiac</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/styles/home.css">
 </head>
-<link rel="stylesheet" href="../../../public/styles/home.css">
 <body>
-
-
     <div class="Header">
-        <img src="../../../public/imgs/logo/LogoHiFiaca Ajustado No Fondo.png" alt="" class="Logo">
+        <img src="/imgs/logo/LogoHiFiaca Ajustado No Fondo.png" alt="" class="Logo">
 
         <div class="NavBarIcons">
-
-            <a href=""><img src="../../../public/icons/busqueda-05.png" alt="" class="Icon"></a>
-
-            <a href="../Landing/index.html"><img src="../../../public/icons/salida-10.png" alt="" class="Icon"></a>
-
-            <a href=""><img src="../../../public/icons/userr_Mesa de trabajo 1.png" alt="" class="Icon"></a>
-
+            <a href=""><img src="/icons/busqueda-05.png" alt="" class="Icon"></a>
+            <a href="../Landing/index.html"><img src="/icons/salida-10.png" alt="" class="Icon"></a>
+            <a href=""><img src="/icons/userr_Mesa de trabajo 1.png" alt="" class="Icon"></a>
         </div>
     </div>
 
     <div class="SpaceSmall">
         <span></span>
     </div>
-
     
     <app-container></app-container>
     
-
     <footer class="Footer">
-
         <p>2025 HiFico. Todos los derechos reservados.</p>
-
         <div class="FooterSection2">
             <p class="FooterText">Privacy</p>
-
             <p class="FooterText1">Terms and Conditions</p>
         </div>
     </footer>
-
-
 </body>
-<script src="./index.js" type="module"></script>
 </html>
