--- a/src/Pages/home/home.html
+++ b/src/Pages/home/home.html
@@ -20,7 +20,7 @@
         </div>
     </div>
 
-    <div class="SpaceSmall">
+    <div class="UltraSpaceSmall">
         <span></span>
     </div>
     
