Hotfix/jp landing home pages 0.2 (#7)
* fix: No documents

* FIX, FEAT: New Typescript and Webpack, Render pages

* Fixed Repetead Docs

* FIX: CSS Errors

* FIX: File connection failure and rendering error

* FIX: Fixing Home Finally 🥳🥳

---------

Co-authored-by: jpcaicedo <juanpablo10oficial@gmail.com>

--- a/src/Pages/Landing/index.html
+++ b/src/Pages/Landing/index.html
@@ -8,13 +8,18 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
 </head>
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./styles/landing.css">
 <body>
     
-    <!-- <div class="BackSphere"></div>  Para las esferas del fondo pero no se como hacerlo bien-->
+        <img src="/imgs/logo/Circulos sin fondo.png" class="CircleSmall" alt="">
+
+        <img src="/imgs/logo/Circulos sin fondo.png" class="CircleBig" alt="">
+
+        <img src="/imgs/logo/Circulos sin fondo.png" class="CircleMedium" alt="">
+
 
     <div class="Logo">
-        <img src="../../../public/imgs/logo/LogoHiFiacNoBackground.png" alt="" class="LogoImage">
+        <img src="/imgs/logo/LogoHiFiacNoBackground.png" alt="" class="LogoImage">
     </div>
 
     <div class="SpaceBig">
@@ -41,7 +46,7 @@
 
         <div class="Card"> 
 
-            <img src="../../../public/icons/mensaje-04.png" alt="" class="Icon">
+            <img src="/icons/mensaje-04.png" alt="" class="Icon">
 
             <p class="CardTittle">Social Network</p>
 
@@ -51,7 +56,7 @@
 
         <div class="Card"> 
 
-            <img src="../../../public/icons/corazon-03.png" alt="" class="Icon">
+            <img src="/icons/corazon-03.png" alt="" class="Icon">
 
             <p class="CardTittle">Favorite Songs</p>
 
@@ -61,7 +66,7 @@
 
         <div class="Card"> 
 
-            <img src="../../../public/icons/user flecha-02.png" alt="" class="Icon">
+            <img src="/icons/user flecha-02.png" alt="" class="Icon">
 
             <p class="CardTittle">Verified Artist</p>
 
