Connection with pages, New Login, New Sign up

--- a/src/Pages/Landing/index.html
+++ b/src/Pages/Landing/index.html
@@ -17,6 +17,10 @@
 
         <img src="/imgs/logo/Circulos sin fondo.png" class="CircleMedium" alt="">
 
+        <img src="/imgs/logo/Circulos sin fondo.png" class="CircleBig1" alt="">
+
+        <img src="/imgs/logo/Circulos sin fondo.png" class="CircleBig2" alt="">
+
 
     <div class="Logo">
         <img src="/imgs/logo/LogoHiFiacNoBackground.png" alt="" class="LogoImage">
@@ -112,7 +116,7 @@
 
             <p class="CardText1">Do you already have an account?</p>
 
-            <a href="" class="CardBotton"><p class="CardBottonText">Click Here!</p></a>
+            <a href="/login" class="CardBotton"><p class="CardBottonText">Click Here!</p></a>
 
         </div>
 
@@ -122,7 +126,7 @@
 
             <p class="CardText1">Don't have an account?</p>
 
-            <a href="" class="CardBotton"><p class="CardBottonText">Click Here!</p></a>
+            <a href="/signup" class="CardBotton"><p class="CardBottonText">Click Here!</p></a>
 
         </div>
 
